# rust_wasm

./: .gitignore  README.md  index.html  package.json  tsconfig.json
rust/: Cargo.toml
rust/src/: lib.rs
src/: main.ts
