[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Abdulaziz Alaboudi"]
description = "Experimenting with running rust in the browser"
license = "MIT"
repository = "https://github.com/Alaboudi1/rust_wasm"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.90"
